# FunCAT

./: .gitignore  INSTALL.md  README.md  environment.yml  pyproject.toml
funcat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
fungalflye/: assemble.py  assemble_p2.py  cli.py  compare.py  dotplot_run.py  enhance.py  logger.py  qc.py  report.py  scaffold.py  wizard.py
fungalflye.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
fungalflye/dotplot/: Collisions.py  FastaGenome.py  Genome.py  GenomeCoord.py  Locus.py  LocusTransform.py  MUMmerTools.py  MsvUtil.py  SafeMath.py  Sequence.py  TempWrapper.py  __init__.py
