[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fungalflye"
version = "0.3.0"
description = "Long-read fungal genome assembly toolkit built on Flye and Medaka"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Beyhan Lab" }
]
keywords = ["bioinformatics", "genomics", "fungi", "assembly", "nanopore", "pacbio"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
  "typer>=0.9",
  "biopython>=1.81",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "decorator>=4.0",
  "scikit-learn",
]

[project.scripts]
fungalflye        = "fungalflye.cli:app"
fungalflye-wizard = "fungalflye.wizard:app"

[project.urls]
Homepage   = "https://github.com/beyhanlab/FungalFlye"
Repository = "https://github.com/beyhanlab/FungalFlye"
Issues     = "https://github.com/beyhanlab/FungalFlye/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fungalflye*"]
