[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funcat"
version = "0.3.0"
description = "FunCAT — Fungal Chromosome Assembly Tool. Long-read fungal genome assembly toolkit built on Flye and Medaka"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Beyhan Lab" }
]
keywords = ["bioinformatics", "genomics", "fungi", "assembly", "nanopore", "pacbio", "funcat"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
  "typer>=0.9",
  "biopython>=1.81",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "decorator>=4.0",
  "scikit-learn",
]

[project.scripts]
funcat        = "fungalflye.cli:app"
funcat-wizard = "fungalflye.wizard:app"

[project.urls]
Homepage   = "https://github.com/beyhanlab/FunCAT"
Repository = "https://github.com/beyhanlab/FunCAT"
Issues     = "https://github.com/beyhanlab/FunCAT/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fungalflye*"]
